--- a/views/articles/_nav_bar.ejs
+++ b/views/articles/_nav_bar.ejs
@@ -19,10 +19,10 @@
           <a class="nav-link" href="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="articles/blog">Blog</a>
+          <a class="nav-link" href="/articles/blog">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/articles/about">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
