--- a/views/articles/about.ejs
+++ b/views/articles/about.ejs
@@ -162,14 +162,16 @@
               <h3 class="mb-0">Senior Software Engineer</h3>
               <div class="subheading mb-3">Cisco Meraki</div>
               <p>
-                Bring to the table my knowledge of salesforce. Create and
-                maintain apps in the sales, community and service clouds so that
-                meraki's reps and partners have a seemless experience.
+                Create and maintain apps in the sales, community and service
+                clouds so that meraki's reps and partners have a seemless
+                experience.
               </p>
               <p>
                 Leverage latest softwares and tools to implement and improve
-                meraki's marketing and suppy chain worflows.
+                meraki's marketing and suppy chain worflows. Implement and
+                improve CI/CD deployment workflows for SFDC and Mulesoft.
               </p>
+              <p>Mentor young dev's on the team on development.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2020 - Present</span>
@@ -316,16 +318,22 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>
-            Apart from being a web developer, I enjoy most of my time being
-            outdoors. In the winter, I am an avid skiier and novice ice climber.
-            During the warmer months here in Colorado, I enjoy mountain biking,
-            free climbing, and kayaking.
+            Apart from being a software developer, I like to learn about how
+            everything works in general. Link most folks from the 90's I like to
+            tinker with mechanical machines, fix broken down one's (try to
+            atleast) and also like to explore nature when I can. Here in the UK,
+            there are vast greenlands that one can just sit back and watch the
+            light dissapear off in the sunset. It is amazing!
           </p>
           <p class="mb-0">
             When forced indoors, I follow a number of sci-fi and fantasy genre
-            movies and television shows, I am an aspiring chef, and I spend a
-            large amount of my free time exploring the latest technolgy
-            advancements in the front-end web development world.
+            movies as well as TV shows. In fact I used to have a huge collection
+            of DVD roms (movies) that I used to write on my PC and keep them as
+            a collection. At one point I had over 300 DVD's, sadly no one uses
+            them any more. I am an aspiring RC pilot as well. If I get the time,
+            I wish to get started on my long forgotten hobby of builing and
+            flying RC planes. I spend a large amount of my free time exploring
+            the latest advancements in the technonlogy world.
           </p>
         </div>
       </section>
