--- a/views/articles/about.ejs
+++ b/views/articles/about.ejs
@@ -101,7 +101,7 @@
             <span class="text-primary">TEJA</span>
           </h1>
           <div class="subheading mb-5">
-            Salesforce · Mulesoft · Javscript ·
+            Salesforce · Mulesoft · Javascript ·
             <a href="mailto:psuryateja17@gmail.com">psuryateja17@gmail.com</a>
           </div>
           <p class="mb-5">
