--- a/views/articles/about.ejs
+++ b/views/articles/about.ejs
@@ -10,7 +10,20 @@
     <meta name="author" content="" />
     <!-- The background pattern for the blog-->
     <!--  <link rel="stylesheet" type="text/css" href="/css/mainBlog.css" /> -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JHWT96KED0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
 
+      gtag('config', 'G-JHWT96KED0')
+    </script>
     <!-- Custom styles for this template -->
     <link href="/css/resume.min.css" rel="stylesheet" />
     <!-- Bootstrap core CSS -->
