--- a/views/articles/home.ejs
+++ b/views/articles/home.ejs
@@ -17,6 +17,7 @@
     />
 
     <link rel="stylesheet" type="text/css" href="css/mainBlog.css" />
+    <title>Code with Surya</title>
     <div
       id="carouselExampleCaptions"
       class="carousel slide"
@@ -37,45 +38,27 @@
           data-bs-slide-to="1"
           aria-label="Slide 2"
         ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="2"
-          aria-label="Slide 3"
-        ></button>
       </div>
       <div class="carousel-inner">
         <div
           class="carousel-item active"
           style="
-            background-image: url('https://source.unsplash.com/RCAhiGJsUUE/1920x1080');
-          "
-        >
-          <div class="carousel-caption">
-            <h5>All about SFDC</h5>
-            <p>Join me on an everlasting journey on the Salesforce platform</p>
-          </div>
-        </div>
-        <div
-          class="carousel-item"
-          style="
-            background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1920x1080');
-          "
-        >
-          <div class="carousel-caption">
-            <h5>Hire Me!</h5>
-            <p>Let's collaborate together and make amazing things happen!</p>
-          </div>
-        </div>
-        <div
-          class="carousel-item"
-          style="
-            background-image: url('https://source.unsplash.com/lHGeqh3XhRY/1920x1080');
+            background-image: url('/img/banner1.jpg');
+            background-size: auto;
           "
         >
           <div class="carousel-caption">
             <h5>Interact with me</h5>
             <p>Go through my blogs and tell me more about this site</p>
+          </div>
+        </div>
+        <div
+          class="carousel-item"
+          style="background-image: url('/img/banner3.jpg')"
+        >
+          <div class="carousel-caption">
+            <h5>All about SFDC</h5>
+            <p>Join me on an everlasting journey on the Salesforce platform</p>
           </div>
         </div>
       </div>
