Connect with Medium blog

--- a/views/articles/_nav_bar.ejs
+++ b/views/articles/_nav_bar.ejs
@@ -18,8 +18,12 @@
         <li class="nav-item active">
           <a class="nav-link" href="/home">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- Use this for the old blog -->
+        <!--      <li class="nav-item">
           <a class="nav-link" href="/articles/blog">Blog</a>
+        </li>-->
+        <li class="nav-item">
+          <a class="nav-link" href="/articles/mediumArticles">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/articles/about">About</a>
