--- a/views/articles/about.ejs
+++ b/views/articles/about.ejs
@@ -47,14 +47,11 @@
       href="/vendor/simple-line-icons/css/simple-line-icons.css"
       rel="stylesheet"
     />
-    <title>Code with Surya</title>
     <%- include('_nav_bar') %>
+    <title>Code with Surya</title>
   </head>
   <body id="page-top">
-    <nav
-      class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top"
-      id="sideNav"
-    >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-none d-lg-block">
           <img
