--- a/views/articles/home.ejs
+++ b/views/articles/home.ejs
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-      <button
+      <a
         class="carousel-control-prev"
         type="button"
         data-bs-target="#carouselExampleCaptions"
@@ -70,16 +70,17 @@
       >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
-      </button>
-      <button
+      </a>
+      <a
         class="carousel-control-next"
         type="button"
         data-bs-target="#carouselExampleCaptions"
         data-bs-slide-to="next"
+        style="color: black"
       >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
-      </button>
+      </a>
     </div>
   </header>
 
