Mulesoft API article

--- a/views/articles/mediumArticles.ejs
+++ b/views/articles/mediumArticles.ejs
@@ -46,7 +46,7 @@
                 data-src="holder.js/200x250?theme=thumb"
                 alt="Thumbnail [200x250]"
                 style="width: 200px; height: 250px"
-                src="/img/thumbnails/article1.jpg"
+                src="/img/thumbnails/article<%= ele.articleNumber %>.jpg"
                 data-holder-rendered="true"
               />
             </div>
